jenkins-testing-gke.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts
        ports:
          - containerPort: 8080
            name: http-port
          - containerPort: 50000
            name: agent-port
        resources:
          limits:
            memory: "2Gi"
            cpu: "1000m"
          requests:
            memory: "1Gi"
            cpu: "500m"
        volumeMounts:
          - name: jenkins-temp-storage
            mountPath: /var/jenkins_home
      volumes:
        - name: jenkins-temp-storage
          emptyDir: {} # This creates the temporary, non-persistent volume
