jenkins-external-gcp-STATEFULSET.yaml
# THIS IS DEPLOYMENT
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  serviceName: jenkins
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts
        ports:
          - containerPort: 8080
            name: http-port
          - containerPort: 50000
            name: agent-port
        resources:
          limits:
            memory: "2Gi"
            cpu: "1000m"
          requests:
            memory: "1Gi"
            cpu: "500m"
        volumeMounts:
          - name: jenkins-home
            mountPath: /var/jenkins_home
  volumeClaimTemplates:
  - metadata:
      name: jenkins-home
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi



--- # THIS IS SERVICE

apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
#  annotations:
    # This tells GCP to create a regional external load balancer
 #   networking.gke.io/load-balancer-type: "External"
spec:
  type: LoadBalancer
  selector:
    app: jenkins
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: agent
      protocol: TCP
      port: 50000
      targetPort: 50000
