jenkins-gcp-loadbalancer-simple-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
spec:
  type: LoadBalancer
  selector:
    app: jenkins
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: agent
      protocol: TCP
      port: 50000
      targetPort: 50000
