jenkins-service-external-gcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  annotations:
    # This tells GCP to create a regional external load balancer
    networking.gke.io/load-balancer-type: "External"
spec:
  type: LoadBalancer
  selector:
    app: jenkins
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: agent
      protocol: TCP
      port: 50000
      targetPort: 50000
