jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service

spec:
  type: NodePort
  selector:
    app: jenkins

  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30090
    - name: agent
      port: 50000
      targetPort: 50000
