jenkins-sts-nodeport.yaml
# STATEFULSET
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jenk
  namespace: default

spec:
  serviceName: "jenk"
  replicas: 1
  selector:
    matchLabels:
      app: jenk

  template:  
    metadata:
      labels:
        app: jenk
    
    spec:
      containers:
        - name: jenk
          image: jenkins/jenkins:lts
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
            - containerPort: 50000
          resources:
            requests:
              cpu: 10m
              memory: 200Mi
            limits:
              cpu: 11m
              memory: 400Mi
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
  volumeClaimTemplates:
  - metadata:
      name: jenkins-home
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 300Mi
   


--- # SERVICE
apiVersion: v1
kind: Service
metadata:
  name: jenk
  namespace: default

spec:
  type: NodePort
  selector:
    app: jenk

  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30090
    - name: agent
      port: 50000
      targetPort: 50000
