pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod
  namespace: default
  labels:
    app: pod
spec:
  containers:
  - name: pod
    image: ajith567890/nexusai:version1
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pod
  namespace: default
spec:
  type: NodePort
  selector:
    app: pod
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
