sso-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sso-service
  

spec:
  type: NodePort
  selector:
    app: sso

  ports:
    - port: 8080
      targetPort: 80
      nodePort: 30080
