nginx.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signal-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
    - host: ajith.run.place
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: signal-service
                port:
                  number: 80
