prod-style-nginx-ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: signal-ingress
  namespace: default

  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - ajith.run.place
      secretName: ajith-tls

  rules:
    - host: ajith.run.place
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: signal-service
                port:
                  number: 80
